<resources>
    <string name="app_name">Dogs Care</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="spinner_title">Select Category</string>

    <string-array name="navigation_drawer_items_array">
        <item>Create</item>
        <item>Read</item>
        <item>Help</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_online_bckup">OnlineBckup</string>
    <string name="title_activity_info">Info</string>


    <string name="memo">MEMO</string>
    <string name="medical_records">MEDICAL RECORDS</string>
    <string name="veternaries">VETERNARIES</string>
    <string name="title_activity_memo">Memo</string>
    <string name="title_activity_medical_records">MedicalRecords</string>
    <string name="title_activity_veternaries">Veternaries</string>
    <string name="title_activity_my_dog_card">MyDogCard</string>
    <string name="title_activity_update_dog_info">UpdateDogInfo</string>

    <string name="galleryPick">Pick Image From Gallery</string>
    <string name="cameraPick">Take Picture</string>

    <string name="cancel">Cancel</string>
    <string name="vaccination">VACCINATION</string>
    <string name="antiparastics">ANTIPARASITICS</string>
    <string name="visitsAndSurgens">ViSITS AND SURGERIES</string>
    <string name="Medicine">MEDICINE/ADMINISTRATIONS</string>
    <string name="Notes">NOTES</string>
    <string name="title_activity_vaccination">Vaccination</string>
    <string name="title_activity_add_vaccination">AddVaccination</string>




</resources>
