<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_margin="30dp"
    >
<TextView
    android:id="@+id/gallery"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/galleryPick"
    android:textColor="@color/themeColor"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:textSize="18dp"/>
    <TextView
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cameraPick"
        android:textColor="@color/themeColor"
        android:layout_marginTop="20dp"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/themeColor"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"/>

</LinearLayout>
