<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="barinder.example.com.navigationdrawer.MyDogCard">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="8">

            <ImageView
                android:id="@+id/img_add"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/dogthumb"
                android:layout_marginTop="10dp"
                />

            <RelativeLayout
                android:id="@+id/btnDogsCard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                >
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />



            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btnVaccination"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp">
                <ImageView
                    android:id="@+id/vaccination"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/vaccination"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"

                    />
                <TextView
                    android:id="@+id/valvaccination"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/vaccination"
                    android:layout_toRightOf="@+id/vaccination"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="20dp"

                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btnAntiparistics"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp">
                <ImageView
                    android:id="@+id/antiparasitic"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/antiparastic"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    />
                <TextView
                    android:id="@+id/valAntiparasitic"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/antiparastics"
                    android:layout_toRightOf="@+id/antiparasitic"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="20dp"

                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btnMedicine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp">
                <ImageView
                    android:id="@+id/medicine"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/medicine"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    />
                <TextView
                    android:id="@+id/valMedicine"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Medicine"
                    android:layout_toRightOf="@+id/medicine"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="20dp"
                    />
            </RelativeLayout>
            <RelativeLayout
            android:id="@+id/btnVisitsAndSurgeries"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp">
            <ImageView
                android:id="@+id/visits"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/visits"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:id="@+id/valVisits"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/visitsAndSurgens"
                android:layout_toRightOf="@+id/visits"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"
                />
        </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btnNotes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp">
                <ImageView
                    android:id="@+id/notes"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/notes"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    />
                <TextView
                    android:id="@+id/valNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Notes"
                    android:layout_toRightOf="@+id/notes"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="20dp"
                    />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
